fix mobile footer, scrollbar, header sizing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,7 @@
 
 html, body {
   height: 100%;
+  height: 100dvh;
   overflow: hidden;
 }
 
